addons/website/static/src/scss/website.scss
/* ... */
#wrapwrap {
    @if o-website-value('body-image') {
        @include body-image-bg-style();
    }

    > main:not(.o_breadcrumb_overlay) {
        div.o_page_breadcrumb {
            nav {
                @include o-apply-colors('breadcrumb');
                @include o-apply-colors('breadcrumb-custom');
                @include o-add-gradient('breadcrumb-gradient');
            }
            a, .breadcrumb-item, li::before {
                color: inherit !important;
            }
        }
    }

    &.o_header_overlay div.o_page_breadcrumb {
        @include o-position-absolute(auto, auto, auto, auto);
        z-index: 1 !important;
        width: 100%;
    }

    > main.o_breadcrumb_overlay {
        div.o_page_breadcrumb {
            @include o-position-absolute(auto, auto, auto, auto);
            z-index: 1 !important;
            width: 100%;
            a, .breadcrumb-item, li::before {
                color: inherit !important;
            }
            nav {
                @include o-apply-colors(1);
                background-color: transparent !important;
                background-image: none !important;
                border-color: transparent;
                color: inherit;
            }
        }
    }

    @if o-website-value('layout') != 'full' {
        > main {
            // The color behind the boxed layout is forced by Odoo. The box
            // background color uses the `$body-bg` variable.
            // grep: BOXED_BODY_BG_ODOO
            background-color: $body-bg;
        }

        @include media-breakpoint-up(sm) {
            padding-right: $grid-gutter-width * 2;
            padding-left: $grid-gutter-width * 2;

            > * {
                // When the website is visually acting like a container (eg.
                // boxed layout), increase its maximum size to handle bigger
                // horizontal paddings.
                $-max-widths: ();
                @each $key, $value in $container-max-widths {
                    $-max-widths: map-merge($-max-widths, (
                        #{$key}: $value + $grid-gutter-width * 2,
                    ));
                }
                @include make-container(0);
                @include make-container-max-widths($-max-widths);
            }

            > header .container {
                max-width: 100% !important;
            }

            // Remove the left/right padding of the header navbar when the
            // header has no visible separation from the body:
            // - The header has no background color (transparent)
            // - The header background color matches the body
            // - The header has no shadow defined
            $-menu-color: o-color('menu-custom') or o-color('menu');
            $-header-template: o-website-value('header-template');
            @if (
                (not $-menu-color or ($-menu-color == o-color('body') and o-website-value('body-image') == null))
                and (o-website-value('menu-box-shadow') == none)
                and (index(("default", "hamburger", "stretch", "vertical", "search"), $-header-template) != null)
            ) {
                > header #o_main_nav {
                    padding-left: 0;
                    padding-right: 0;
                    
                    @if ($-header-template == "search") {
                        & > div, 
                        & > .o_header_hide_on_scroll > .container {
                            padding-left: 0;
                            padding-right: 0;
                        }
                    }
                }
            }
        }

        @if o-website-value('layout') == 'framed' {
            @include media-breakpoint-up(md) {
                padding-top: $grid-gutter-width;
                padding-bottom: $grid-gutter-width * 1.5;
            }
        } @else if o-website-value('layout') == 'postcard' {
            @include media-breakpoint-up(md) {
                $-border-radius: $border-radius-lg;
                // Don't know why (browser rounding mistake?) but the inner
                // border radius must be 1px lower for this to be visually ok
                // (despite the fact there is no border or any space)
                $-inner-border-radius: $-border-radius - 0.0625rem;
                > * {
                    margin-bottom: $spacer * 2;
                }
                > header {
                    &, &.o_header_affix {
                        .navbar {
                            @include border-bottom-radius($-border-radius);
                        }
                    }
                }
                > main, > footer {
                    @include border-radius($-border-radius);

                    .oe_structure > :first-child {
                        @include border-top-radius($-inner-border-radius);
                    }
                }
                > main .oe_structure > :last-child,
                .o_footer_copyright {
                    @include border-bottom-radius($-inner-border-radius);
                }
            }
        }
    }

    #footer {
        & + .o_cookie_policy_link_container {
            margin-top: 1rem;
        }

        & ~ .o_cookie_policy_link_container:last-of-type {
            margin-bottom: 1rem;
        }
    }
}

// We don't want the area to be visible in edit mode when we edit the popup that
// is shared on all pages, otherwise the .o_savable area has a minimum height
// when it is focused.
#o_shared_blocks {
    min-height: 0px;
    height: 0px;

    &:empty {
        display: none;
    }
}

.o_navlink_no_background .navbar-light {
    --NavLinkWithBackground-bg-color: transparent;
}
/* ... */

